--- a/src/app/book-flight/book-flight.component.css
+++ b/src/app/book-flight/book-flight.component.css
@@ -6,10 +6,38 @@ padding-bottom: 3cm;
 
 }
 
-#five{
+/* #five{
     padding-bottom: 10cm;
-}
+} */
 
 td{
+    width: 20cm;
+}
+
+.card-body{
+    margin-left: 100px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 20px 5px rgb(63, 57, 57);
+}
+
+#dd{
+    margin: 1cm;
+    margin-left: 7cm;
+    margin-right: 7cm;
+}
+
+input{
     width: 10cm;
+    margin-left: 1cm;
+}
+label{
+    margin-left: 1cm;
+}
+
+button{
+    margin-left: 3cm;
+    margin-bottom: 1cm;
+    margin-top: 0.5cm;
+    width: 5cm;
+    height: 2cm;
 }
