--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,29 +1,18 @@
-#one{
+button{
 
-    /* padding: 3cm; */
-    margin-top: 2cm;
-    margin-left: 5cm;
+    margin-left: 8cm;
+    margin-top: 1cm;
+    align-content: center;
+    float: right;
+    width: 10cm;
+    height: 2.7cm;
+
+}
+p
+{
     margin-bottom: 5cm;
 }
-
-#three{
-
-    float: left;
-    height: 10cm;
-    width: 10cm;
-    background-color: darkslategray;
-    border-radius: 20px;
-    margin-top: 10px;
-    margin-right: 150px;
-
-}
-
-#four{
-    float: right;
-    height: 10cm;
-    width: 10cm;
-    background-color: darkslategray;
-    border-radius: 200px;
-    margin-top: 10px;
-    margin-right: 10px;
+#one{
+    margin-left: 5cm;
+    margin-right: 2cm;
 }
