--- a/src/app/search-flight/search-flight.component.html
+++ b/src/app/search-flight/search-flight.component.html
@@ -1,9 +1,26 @@
 <!-- style="background-color:aquamarine;padding: 20px; padding-bottom: 70px; padding-left: 110px;" -->
 <!-- <div class="card m-5" id="five" > -->
   
+  <style>
+
+    /* h1{
+      font-size: 30px, 10px, 10px;
+      text-decoration: black;
+      font-weight: bolder;
+    } */
+
+
+
+  </style>
+
   <div class="card-body" id="five">
       <strong><hr></strong>    
-      <h3 class="card-header" id="six">SEARCH FLIGHT</h3>
+      <div class="card-header">
+        <div class="row">
+          <h3 class="w3-xxxlarge">SEARCH FLIGHT</h3>
+          <button style="margin-left: 6cm;" class="btn btn-dark" (click) = "goto()" >GO TO DASHBOARD</button>
+        </div>
+      </div>
 
     <form #fB="ngForm" (submit) = "searchFlight()" >
     
@@ -21,7 +38,7 @@
          
       <br>
       <br>
-      <br>
+      <!-- <br> -->
       <div class="form-row">
         <div class="col-md-4 mb-3">        
           <label for="validationDefault03">FROM</label>
@@ -55,12 +72,12 @@
       </div>
       <br>
       
-      <button class="btn btn-primary" type="submit">SEARCH</button>
+      <button class="btn btn-dark" type="submit">SEARCH FLIGHT</button>
     </form>
  
     
-    <br><br><br><br><hr>
-    
+    <!-- <br><br><br><br><hr> -->
+    <hr>
     <span *ngIf = "search; then con01 else con02" ></span>
       <ng-template #con02></ng-template>
       <ng-template #con01>
@@ -73,7 +90,7 @@
               <table>
                 <div class="col-md-50">
                   
-                    <tr><th>#</th><td>{{j+1}}</td></tr>
+                    <tr><th style="padding-right: 5cm;">#</th><td>{{j+1}}</td></tr>
                     <tr><th>NAME</th><td>{{i.flight.name}}</td></tr>
                     <tr><th>MODEL</th><td>{{i.flight.model}}</td></tr>
                     <tr><th>SOURCE</th><td>{{i.source.name}}</td></tr>
@@ -83,13 +100,8 @@
                     <tr><th>AVAILABLE SEATS</th><td>{{i.seats}}</td></tr>
                     <tr><th>PRICE</th><td>{{this.i.flightPrice}}</td></tr>
                     <tr><th>SELECT</th><td>
-                      <span *ngIf = "logInCheck; then con01 else con02"></span>
-                      <ng-template #con01>
-                        <button (click) = "bookFlight(i)">SELECT</button>
-                      </ng-template>
-                      <ng-template #con02>
-                        <p>PLEASE LOGIN FIRST TO SELECT FLIGHT</p>
-                      </ng-template>
+                    <button (click) = "bookFlight(i)">SELECT</button>
+                      
                     </td></tr>
             
                 </div>
