--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-in/sign-in.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-in/sign-in.component.html
@@ -27,6 +27,7 @@
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     CONFIRM IDENTITY
                 </button>
+                <!-- <button mat-raised-button color="primary" type="submit">Log In</button> -->
             </form>
         </div>
     </div>
