--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
         <!-- <div class="container-md"> -->
             <div class="" >
                 <div class="row">
-                    <a class = ""><h1>FLIGHT MANAGEMENT SYSTEM</h1></a>
+                    <a href="#" class = ""><h1>FlightMangementSystem</h1></a>
                 </div>
             </div>      
             
@@ -24,15 +24,15 @@
                     <ng-template #con02>
                         <div class="row">
                         <div class="column">
-                        <button type="button" id="two" (click) = "logIn()" color="primary" class="z-depth-5" md-button><strong>LOG IN</strong></button>
+                        <button type="button" id="two" (click) = "logIn()"  class="btn btn-light"><strong>LOG IN</strong></button>
                         </div>
                         <div class="column">
-                        <button type="button" id="two" (click) ="signUp()" color="primary" class="z-depth-5"><strong>SIGN UP</strong></button>
+                        <button type="button" id="two" (click) ="signUp()" class="btn btn-light"><strong>SIGN UP</strong></button>
                         </div>
                     </div>
                     </ng-template>
                     <ng-template #con01>
-                        <button type="button"  color="primary" class="z-depth-5" (click) = "logOut()"><strong>LOG OUT</strong></button>
+                        <button type="button"  class="btn btn-light" (click) = "logOut()"><strong>LOG OUT</strong></button>
                     </ng-template>
                     
                 </ul>
