--- a/src/app/book-flight/book-flight.component.html
+++ b/src/app/book-flight/book-flight.component.html
@@ -1,5 +1,4 @@
-<!-- <span *ngIf = "payStatus; then con01 else con02"></span>
-
+<span *ngIf = "payStatus; then con01 else con02"></span>
 
 <ng-template #con01>
 
@@ -12,22 +11,20 @@
 
 </ng-template>
 
-<ng-template #con02> -->
+<ng-template #con02>
 
 
-  <div class="card-body" id="dd">
-    <strong><hr></strong>    
-    <h3 class="card-header" id="six">ADD PASSENGER DETAILS</h3>
+  <div class="container" id="four">
+
 
     
-      <br><br>
+      <div class="" >
+        <h3>Add Passengers</h3>
         <form #fB="ngForm" (submit) = "addPassenger()" >
           <!-- *ngFor = " let i of passNum" -->
-          <div class="row">
-        <div class="column">
           <div class="form-row" >
             <div class="col-md-4 mb-3">   
-              <label >NAME</label>
+              <label for="name">NAME</label>
               <input type="text" placeholder="name" required [(ngModel)] ="name" name="name" class="form-control">
             </div>
           </div>
@@ -40,28 +37,29 @@
           <div class="form-row" >
             <div class="col-md-4 mb-3">
               <label for="uin">UNIQUE ID</label>
-              <input type="text"  class="form-control" name="uin" [(ngModel)]="uin" required placeholder="id">
+              <input type="text" class="form-control" name="uin" [(ngModel)]="uin" required placeholder="id">
             </div>
           </div>
-        </div>
-          <div class="column">
-          
-              <button class="btn btn-dark" type="submit">ADD PASSENGER</button>
-              <br>
-              <button class="btn btn-dark" type="submit" (click) ="doneBooking()" >PROCEED TO PAYMENT</button>
-                          
-        </div>
+          <div class="form-row" >
+            <div class="col-md-4 mb-3">
+              <button class="btn btn-primary-dark" type="submit">ADD PASSENGER</button>
+            </div>
     
-      </div>
+            <div class="col-md-4 mb-3">
+              <button class="btn btn-primary-dark" type="submit" (click) ="doneBooking()" >PROCEED TO PAYMENT</button>
+            </div>
+          </div>
+    
+    
+    
         </form>
     
-
-      <hr>
+      </div>
+    
       <span *ngIf = "show; then con01"></span>
       <ng-template #con01>
-      
       <div class="container" id = "five">
-      <h3 class="card-header" id="six">PASSENGER DETAILS</h3>
+      <h3>Passenger Details:</h3>
       <table>
     
         <thead>
@@ -84,4 +82,4 @@
     </div>
     </ng-template>
   </div>
-<!-- </ng-template> -->
+</ng-template>
