--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/add-flight/add-flight.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/add-flight/add-flight.component.html
@@ -37,7 +37,10 @@
         <span *ngIf = "show; then con01"></span>
         <ng-template #con01>
         <div class="card">
-            <h4 class="card-header">ADDED Flight</h4>
+            <div class="card-header">
+                <h4>ADD FLIGHT</h4>
+                <button><a href="/adDashboard">DASHBOARD</a></button>
+            </div>
             <div class="card-body">
 
                 <table>
