--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,11 @@
 <html>
 
 <body>
+    <div class="nav-bar">
+
+        <app-home></app-home>
     
+    </div>
     <div class="container" id="one">
    
 
