--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/search-flight/search-flight.component.css
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/search-flight/search-flight.component.css
@@ -7,6 +7,8 @@ form{
 
     /* margin-left: 100px; */
     padding-top: 1cm;
+    border-radius: 5px;
+    /* box-shadow: 5px 5px 20px 5px rgb(63, 57, 57); */
 
 }
 
