--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/search-flight/search-flight.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/search-flight/search-flight.component.html
@@ -17,7 +17,7 @@
       <strong><hr></strong>    
       <div class="card-header">
         <div class="row">
-          <h3 class="w3-xxxlarge">SEARCH FLIGHT</h3>
+          <h3 >SEARCH FLIGHT</h3>
           <button style="margin-left: 6cm;" class="btn btn-dark" (click) = "goto()" >GO TO DASHBOARD</button>
         </div>
       </div>
@@ -63,12 +63,12 @@
           <label for="validationDefault03">ON</label>
           <input type="date" min="30-04-2020" name="dateTime" class="form-control" [(ngModel)] = "dateTime" required id="date" placeholder="Date" required>
         </div>
-
+<!-- 
         <div class="col-md-4 mb-3">
           <label for="">PASSENGERS (AGE > 5 Years)</label>
           <input type="text" name="passenger"class="form-control" [(ngModel)] = "passenger">
              
-        </div>
+        </div> -->
       </div>
       <br>
       
