--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/book-flight/book-flight.component.css
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/book-flight/book-flight.component.css
@@ -11,7 +11,7 @@ padding-bottom: 3cm;
 } */
 
 td{
-    width: 20cm;
+    width: 10cm;
 }
 
 .card-body{
@@ -35,9 +35,13 @@ label{
 }
 
 button{
-    margin-left: 3cm;
+    margin-left: 1cm;
     margin-bottom: 1cm;
     margin-top: 0.5cm;
     width: 5cm;
     height: 2cm;
+}
+button:hover{
+    border-radius: 5px;
+    box-shadow: 5px 5px 20px 5px rgb(63, 57, 57);
 }
