--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/dashboard/dashboard.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,14 @@
+<div class="nav-bar">
+
+    <app-home></app-home>
+
+</div>
+
 <div class="container" id="one">
    
 <br><br>
         <div class="card-header">
-            <h1><strong>HELLO {{this.name}} WELCOME TO FMS !!</strong></h1>
+            <h2>HELLO <strong>{{this.user.fname}}</strong> WELCOME TO FMS !!</h2>
         </div>
         <br>
         <div class="row">
@@ -12,11 +18,11 @@
                 <table class="table table-hover" id="two">
 
                     <tbody>
-                        <tr><th>NAME:</th><td style="padding-right: 5cm;">{{user.name}}</td></tr>
-                        <tr><th>ID:</th><td style="padding-right: 5cm;">{{user.id}}</td></tr>
-                        <tr><th>E-MAIL:</th><td style="padding-right: 5cm;">{{user.eMail}}</td></tr>
-                        <tr><th>MOBILE:</th><td style="padding-right: 5cm;">{{user.phone}}</td></tr>
-                        <tr><th>TOTAL NO. OF BOOKINGS:</th><td style="padding-right: 5cm;">{{user.bookingList.length}}</td></tr>
+                        <tr><th>USER-NAME:</th><td style="padding-right: 2cm;">{{this.user.username}}</td></tr>
+                        <tr><th>ID:</th><td style="padding-right: 2cm;">{{this.user.id}}</td></tr>
+                        <tr><th>E-MAIL:</th><td style="padding-right: 2cm;">{{this.user.mobile}}</td></tr>
+                        <tr><th>MOBILE:</th><td style="padding-right: 2cm;">{{this.user.email}}</td></tr>
+                        <tr><th>TOTALBOOKINGS:</th><td style="padding-right: 2cm;">{{this.bookingLength}}</td></tr>
                     </tbody>
                 </table>
 
