--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/home/home.component.css
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/home/home.component.css
@@ -31,3 +31,44 @@ h1{
     margin-right: 10px;
 }
 
+button {
+    position: relative;
+    background-color: rgb(37, 131, 255);
+    border: thick , 2px, turquoise;
+    margin-right: 1cm;
+    font-size: 10px;
+    color: rgb(247, 230, 230);
+    /* padding: 20px; */
+    width: 100px;
+    height: 50px;
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  button:after {
+    content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+  }
+  
+  button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+  }
+  button:hover{
+    border-radius: 15px;
+    box-shadow: 5px 5px 20px 5px rgb(63, 57, 57);
+  }
