--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-in/sign-in.component.css
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-in/sign-in.component.css
@@ -1,36 +1,74 @@
-#one{
+label {
+    display: block;
+    margin-top: 10px;
+  }
+  
+  .card-container.card {
+    max-width: 400px !important;
+    padding: 40px 40px;
+    box-shadow: 2px 2px 10px 2px rgb(63, 57, 57);
+  }
+  
+  .card {
+    background-color: #f7f7f7;
+    padding: 20px 25px 30px;
+    margin: 0 auto 25px;
+    margin-top: 50px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  }
+  
+  .profile-img-card {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+  }
 
-    /* padding-right: 5cm;
-    padding-left: 3cm;
-    padding-bottom: 1cm;*/
-    margin-bottom: 7cm; 
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 20px 5px rgb(63, 57, 57);
-}
-.card
-{
-    
-    align-content: center;
-    box-sizing: border-box;
-    /* text-align: center; */
-    /* initial-letter-align: center; */
-}
-input{
-    box-sizing: border-box;
-    resize: vertical;
-}
-
-button{
+  .button {
+    position: relative;
+    background-color: rgb(37, 131, 255);
+    border: none;
+    font-size: 20px;
+    color: rgb(247, 230, 230);
+    /* padding: 20px; */
     width: 200px;
     height: 50px;
-    background-color: rgb(8, 65, 253);
-    animation-name: example;
-    animation-duration: 10s;
-}
-      
-@keyframes example {
-    from {background-color: rgb(66, 10, 10);}
-    to {background-color: rgb(71, 7, 248)}
-}
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  .button:after {
+    content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+  }
+  
+  .button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+  }
+  .button:hover{
+    border-radius: 15px;
+    box-shadow: 5px 5px 20px 5px rgb(63, 57, 57);
+  }
