--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-in/sign-in.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-in/sign-in.component.html
@@ -1,36 +1,95 @@
-<div class="col-md-6 offset-md-3 mt-5" id = "one">
-    <!-- <div class="alert alert-info">
-        Username: test<br />
-        Password: test
-    </div> -->
-    <div class="card">
-        <h4 class="card-header">LOG IN</h4>
-        <div class="card-body">
-            <form [formGroup]="loginForm" id="form_" (ngSubmit)="login()">
-                <div class="form-group">
-                    <div class="col-25"><label for="email">Email</label>
-                    <div class="col-75"><input type="email" formControlName="email" class="form-control" placeholder="Enter your email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/></div>
-                </div><div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                        <div *ngIf="f.email.errors.required">Email is required</div>
-                        <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" formControlName="password" class="form-control" placeholder="Enter the password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                        <div *ngIf="f.password.errors.minlength">Password must be at least 8 characters</div>
-                    </div>
-                </div>
-                <button [disabled]="loading" class="btn btn-primary animated bounce">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    CONFIRM IDENTITY
-                </button>
-                <!-- <button mat-raised-button color="primary" type="submit">Log In</button> -->
-            </form>
+
+<div class="nav-bar">
+  <app-commonhome></app-commonhome>
+</div>
+<div class="col-md-12">
+    <div class="card card-container" id="one">
+      <img
+        id="profile-img"
+        src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
+        class="profile-img-card"
+      />
+      <form
+        *ngIf="!isLoggedIn"
+        name="form"
+        (ngSubmit)="f.form.valid && onSubmit()"
+        #f="ngForm"
+        novalidate
+      >
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            class="form-control"
+            name="username"
+            [(ngModel)]="form.username"
+            required
+            #username="ngModel"
+          />
+          <div
+            class="alert alert-danger"
+            role="alert"
+            *ngIf="f.submitted && username.invalid"
+          >
+            Username is required!
+          </div>
         </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            name="password"
+            [(ngModel)]="form.password"
+            required
+            minlength="6"
+            #password="ngModel"
+          />
+          <div
+            class="alert alert-danger"
+            role="alert"
+            *ngIf="f.submitted && password.invalid"
+          >
+            <div *ngIf="password.errors.required">Password is required</div>
+            <div *ngIf="password.errors.minlength">
+              Password must be at least 6 characters
+            </div>
+          </div>
+        </div>
+          <!-- <div class="form-check form-check-inline"> -->
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option2" disabled>
+          <label class="form-check-label" for="inlineCheckbox3">Remember Me (disabled)</label>
+        <!-- </div> -->
+        <br>
+        <div class="form-group">
+          <button class="button">
+            LOG IN
+          </button>
+        </div>
+        <div class="form-group">
+          <div
+            class="alert alert-danger"
+            role="alert"
+            *ngIf="f.submitted && isLoginFailed"
+          >
+            Login failed: {{ errorMessage }}
+          </div>
+        </div>
+      </form>
+  
+      <div class="alert alert-success" *ngIf="isLoggedIn">
+        Logged in as {{ roles }}.
+        <button (click) = "logout()">LOG OUT</button>
+      </div>
+      
     </div>
 
-    
-</div>
+
+    <div class="card card-container" id="">
+      <p><a href="signIn" aria-disabled="true">forgot password?</a></p>
+      <p>New User? - <a href="signUp">SignUp</a></p>
+
+    </div>
+
+  </div>
+  
