--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-up/sign-up.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/sign-up/sign-up.component.html
@@ -1,26 +1,45 @@
 <!-- main app container -->
+<div class="nav-bar">
+    <app-commonhome></app-commonhome>
+</div>
+
 <div class="card m-5" id="one">
     <h5 class="card-header">SIGN UP</h5>
     <div class="card-body">
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <div class="form-row">
                 <div class="form-group col-5">
-                    <label>Name</label>
-                    <input type="text" formControlName="Name"  class="form-control" placeholder="Enter your name" [ngClass]="{ 'is-invalid': submitted && f.Name.errors }" />
-                    <div *ngIf="submitted && f.Name.errors" class="invalid-feedback">
-                        <div *ngIf="f.Name.errors.required">Name is required</div>
-                        <div *ngIf="f.Name.errors.maxlength">Name cannot be more than 15 characters</div>
+                    <label>First Name</label>
+                    <input type="text" formControlName="firstName"  class="form-control" placeholder="Enter your First name" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                    <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                        <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                        <div *ngIf="f.firstName.errors.maxlength">First Name cannot be more than 15 characters</div>
                     </div>
                 </div>
                 <div class="form-group col-5">
-                    <label>Date of Birth</label>
-                    <input type="date" formControlName="dob" class="form-control"  [ngClass]="{ 'is-invalid': submitted && f.dob.errors }" />
-                    <div *ngIf="submitted && f.dob.errors" class="invalid-feedback">
-                        <div *ngIf="f.dob.errors.required">Date of Birth is required</div>
+                    <label>Last Name</label>
+                    <input type="text" formControlName="lastName"  class="form-control" placeholder="Enter your Last name" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                    <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                        <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                        <div *ngIf="f.lastName.errors.maxlength">Last Name cannot be more than 15 characters</div>
                     </div>
                 </div>
     
             </div>
+
+            <div class="form-row">
+                <div class="form-group col-5">
+                    <label>User Name</label>
+                    <input type="text" formControlName="username"  class="form-control" placeholder="Enter your User name" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                        <div *ngIf="f.username.errors.required">User Name is required</div>
+                        <div *ngIf="f.username.errors.maxlength">User Name cannot be more than 15 characters</div>
+                    </div>
+                </div>
+    
+            </div>
+
+
             <div class="form-row">
                 <div class="form-group col-5">
                     <label>Email</label>
@@ -86,29 +105,16 @@
                 <div *ngIf="submitted && f.acceptTerms.errors" class="invalid-feedback">Accepting Terms & Conditions is required</div>
             </div>
             <div class="text-center">
-                <button class="w3-button w3-black" onclick = "onSubmit(); document.getElementById('id01').style.display='block'">Register</button>
-
-                <!-- <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button> -->
-                <!-- <div id="id01" class="w3-modal">
-                  <div class="w3-modal-content">
-                    <header class="w3-container w3-teal"> 
-                      <span onclick="document.getElementById('id01').style.display='none'" 
-                      class="w3-button w3-display-topright">&times;</span>
-                      <h2>Modal Header</h2>
-                    </header>
-                    <div class="w3-container">
-                      <p>Some text..</p>
-                      <p>Some text..</p>
-                  </div>
-                    <footer class="w3-container w3-teal">
-                      <p>Modal Footer</p>
-                    </footer>
-                  </div>
-                </div>  -->
-
-
-                <button class="btn btn-secondary" type="reset" (click)="onReset()">Reset</button>
+                <button class="w3-button w3-black" (click) = "onSubmit()">Register</button>
+                <button class="btn btn-secondary-light" type="reset" (click)="onReset()">Reset</button>
             </div>
+           
         </form>
+        <div class="alert alert-warning" *ngIf="showError">
+            Signup failed!<br />{{ errorMessage }}
+          </div>
+        <div class="alert alert-success" *ngIf="submitted && !isSignUpFailed">
+      Your registration is successful!
+    </div>
     </div>
 </div>
