--- a/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/dashboard/dashboard.component.html
+++ b/FLIGHT MANAGEMENY_SYSTEM_USER_INTERFACE/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
    
 <br><br>
         <div class="card-header">
-            <h2>HELLO <strong>{{this.user.fname}}</strong> WELCOME TO FMS !!</h2>
+            <h2>HELLO <strong><em>{{this.user.fname}}</em></strong> WELCOME TO FMS !!</h2>
         </div>
         <br>
         <div class="row">
@@ -18,7 +18,7 @@
                 <table class="table table-hover" id="two">
 
                     <tbody>
-                        <tr><th>USER-NAME:</th><td style="padding-right: 2cm;">{{this.user.username}}</td></tr>
+                        <tr><th>USER-NAME:</th><td style="padding-right: 2cm;">{{this.user.username}} </td></tr>
                         <tr><th>ID:</th><td style="padding-right: 2cm;">{{this.user.id}}</td></tr>
                         <tr><th>E-MAIL:</th><td style="padding-right: 2cm;">{{this.user.mobile}}</td></tr>
                         <tr><th>MOBILE:</th><td style="padding-right: 2cm;">{{this.user.email}}</td></tr>
